--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,5 @@ repositories {
 
 dependencies {
     compile "com.facebook.react:react-native:${safeExtGet('reactNative', '+')}"
-    compile "com.google.android.gms:play-services-base:9.4.0"
+    compile "com.google.android.gms:play-services-base:${safeExtGet('googlePlayServicesVersion', '15.0.1')}"
 }
